[gd_scene load_steps=4 format=3 uid="uid://dk7t3262u8i5w"]

[ext_resource type="Script" uid="uid://bre8ruwbahvro" path="res://media/scripts/panneau.gd" id="1_o8svk"]
[ext_resource type="Texture2D" uid="uid://f6x6ijbrbgb3" path="res://media/assets/spritesheet-tiles-default.png" id="2_fm38l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0kba"]
size = Vector2(60, 55)

[node name="PanneauMessage" type="Area2D"]
script = ExtResource("1_o8svk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(9, 8)
texture = ExtResource("2_fm38l")
region_enabled = true
region_rect = Rect2(641, 640.814, 62, 63.0919)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 12.5)
shape = SubResource("RectangleShape2D_r0kba")

[node name="Message" type="Node2D" parent="."]

[node name="Fond" type="ColorRect" parent="Message"]
offset_left = -42.0
offset_top = -48.0
offset_right = 55.0
color = Color(0.906493, 0.906493, 0.906493, 1)

[node name="Etiquette" type="Label" parent="Message/Fond"]
layout_mode = 0
offset_left = 1.0
offset_top = 13.0
offset_right = 95.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(0.4, 0.588235, 1, 1)
text = "Ã€ la maison!"

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="body_exited" from="." to="." method="_on_body_exited"]
